// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmountInput Component AmountInput renders 1`] = `
<div>
  <input
    autocomplete="off"
    class="default"
    data-testid="name"
    inputmode="numeric"
    type="text"
    value=""
  />
</div>
`;

exports[`AmountInput Component AmountInput renders groupint style NONE 1`] = `
<div>
  <input
    autocomplete="off"
    class="default"
    inputmode="numeric"
    type="text"
    value=""
  />
</div>
`;

exports[`AmountInput Component AmountInput renders in readonly with no value, highlighted 1`] = `
<div>
  <div
    class="default readOnly highlighted"
  >
    <span
      class="typography ellipsis"
      title="A - B"
    >
      A - B
    </span>
  </div>
</div>
`;

exports[`AmountInput Component AmountInput renders in readonly with value LAKH fornat 1`] = `
<div>
  <span
    autocomplete="off"
    class="default readOnly highlighted"
  >
    A 1,23,45,67,890.12 B
  </span>
</div>
`;

exports[`AmountInput Component AmountInput renders in readonly with value LAKH fornat without prefix and suffix 1`] = `
<div>
  <span
    autocomplete="off"
    class="default readOnly highlighted"
  >
    1,23,45,67,890.12
  </span>
</div>
`;

exports[`AmountInput Component AmountInput renders in readonly with value shotern 1`] = `
<div>
  <div
    class="default readOnly highlighted"
  >
    <span
      class="typography"
    >
      A 1.23 b B
    </span>
  </div>
</div>
`;

exports[`AmountInput Component AmountInput renders in readonly with value shotern 2`] = `
<div>
  <div
    class="default readOnly highlighted"
  >
    <span
      class="typography"
    >
      A 1.23 b B
    </span>
  </div>
</div>
`;

exports[`AmountInput Component AmountInput renders triggers onChange 1`] = `
<div>
  <input
    autocomplete="off"
    class="default"
    data-testid="name"
    inputmode="numeric"
    type="text"
    value="A 123,456,789 B"
  />
</div>
`;

exports[`AmountInput Component AmountInput renders triggers onChange with min and max 1`] = `
<div>
  <input
    autocomplete="off"
    class="default"
    data-testid="name"
    inputmode="numeric"
    type="text"
    value="12"
  />
</div>
`;

exports[`AmountInput Component AmountInput renders triggers onChange with min and max 2`] = `
<div>
  <input
    autocomplete="off"
    class="default"
    data-testid="name"
    inputmode="numeric"
    type="text"
    value="-12"
  />
</div>
`;

exports[`AmountInput Component AmountInput renders with empty input in read only 1`] = `
<div>
  <div
    class="default readOnly"
    data-testid="name"
  >
    <span
      class="typography"
    >
      -
    </span>
  </div>
</div>
`;

exports[`AmountInput Component AmountInput renders with empty input in read only prefix and suffix 1`] = `
<div>
  <div
    class="default readOnly"
    data-testid="name"
  >
    <span
      class="typography"
    >
      A - B
    </span>
  </div>
</div>
`;

exports[`AmountInput Component AmountInput renders with empty input in read only prefix and suffix shorten 1`] = `
<div>
  <span
    autocomplete="off"
    class="default readOnly"
    data-testid="name"
  >
    A 10 B
  </span>
</div>
`;

exports[`AmountInput Component AmountInput renders with empty input in read only prefix and suffix shorten 2`] = `
<div>
  <span
    autocomplete="off"
    class="default readOnly"
    data-testid="name"
  >
    A 10 B
  </span>
</div>
`;

exports[`AmountInput Component AmountInput renders with in read only shorten highlighted prefix and suffix shorten 1`] = `
<div>
  <div
    class="default readOnly highlighted"
    data-testid="name"
  >
    <span
      class="typography"
    >
      A 1.23 b B
    </span>
  </div>
</div>
`;

exports[`AmountInput Component AmountInput renders with input in readonly highlighted shorten 1`] = `
<div>
  <div
    class="default readOnly highlighted"
    data-testid="name"
  >
    <span
      class="typography"
    >
      1.23 b
    </span>
  </div>
</div>
`;
